people circles, full name for people, roles

--- a/app/views/people_circles/new.html.erb
+++ b/app/views/people_circles/new.html.erb
@@ -1,2 +1,2 @@
-<h1>PeopleCircles#new</h1>
-<p>Find me in app/views/people_circles/new.html.erb</p>
+<h1>Assign Person to Circle</h1>
+<%= render partial: 'form' %>
