--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,6 +1,11 @@
 <%=simple_form_for @person do |f|%>
   <%= f.input :first_name %>
   <%= f.input :last_name %>
+  <%= f.input :full_name%>
+    <div class="form-group">
+      <%= f.label :role %>
+      <%= f.collection_select :role, Person::ROLE, :to_s, :to_s, :include_blank => true%>
+  </div>
   <%= f.input :address1 %>
   <%= f.input :address2 %>
   <%= f.input :city %>
@@ -8,6 +13,5 @@
   <%= f.input :zip %>
   <%= f.input :email %>
   <%= f.input :phone %>
-  <%= f.input :role %>
   <%= f.button :submit %>
 <%end%>
